[project]
name        = "hook"
description = "Common hatchling hook used in projects"
authors     = [{name="Tremeschin"}]
version     = "1.0.0"
license     = "MIT"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hook"]
